# StudyProject

./: CMakeLists.txt  Dockerfile  README.md
include/grpc/: grpc_server.h
resources/protos/: study.proto
